# ChangeLog for sys-apps/calculate-desktop
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-desktop-2.2.0.0_p20100907 (07 Sep 2010)

  07 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-desktop-2.2.0.0_p20100903.ebuild,
  +calculate-desktop-2.2.0.0_p20100907.ebuild:
  Daily update.

*calculate-desktop-2.2.0.0_p20100903 (03 Sep 2010)

  03 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-desktop-2.2.0.0_p20100903.ebuild:
  Daily update.

*calculate-desktop-2.2.0.0_p20100901 (01 Sep 2010)

  01 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-desktop-2.2.0.0_p20100813-r1.ebuild,
  +calculate-desktop-2.2.0.0_p20100901.ebuild:
  Daily update. Remove old live ebuild.

*calculate-desktop-2.2.0.0_p20100819-r2 (24 Aug 2010)

  24 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-desktop-2.2.0.0_p20100819-r1.ebuild,
  +calculate-desktop-2.2.0.0_p20100819-r2.ebuild:
  Fix dependence.

*calculate-desktop-2.2.0.0_p20100816 (16 Aug 2010)

  16 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-desktop-2.2.0.0_p20100816.ebuild:
  New live ebuild from 2010/08/16.

*calculate-desktop-2.2.0.0_p20100813 (13 Aug 2010)

  13 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-desktop-2.2.0.0_p20100812.ebuild,
  +calculate-desktop-2.2.0.0_p20100813.ebuild:
  Update live ebuild from 13/08/2010.

  12 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-desktop-2.2.0.0_p20100812.ebuild:
  Fix ebuild dependence. Calculate-client less 2.2 is wrong.

  12 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-desktop-2.2.0.0_p20100811.ebuild, +calculate-desktop-2.2.0.0_p20100812.ebuild:
  Update live ebuild from 11/08/2010.

*calculate-desktop-2.2.0.0_p20100811 (11 Aug 2010)

  11 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-desktop-2.2.0.0_rc1-r1.ebuild,