@@ -2,6 +2,6 @@ AUX calculate-desktop-2.2.0.0_rc1-r1.patch 456 RMD160 f4f15ea8be06a9e0d71494f231
 EBUILD calculate-desktop-2.2.0.0_p20100819-r3.ebuild 1145 RMD160 a1d20e24555d1d822d7b6ceb3d01f01c41c2b56d SHA1 4aaa910ef6f0762a834af73d2af8be1455823d7f SHA256 f42e47b8322c632ae1f7b31706098c00fc0c79010368a7cbed4be7286cbd2a40
 EBUILD calculate-desktop-2.2.0.0_p20100901-r1.ebuild 1145 RMD160 fac227bfae95d62d046a19573f925f6ca6eee4a8 SHA1 4d806e56ecc17eaac8f058fbed82f38cf864bc70 SHA256 417b0ea7af8f2b92f96a014770ec0e7657f412d022c60041cd7cbb88fcfbc17f
 EBUILD calculate-desktop-2.2.0.0_p20100910.ebuild 1145 RMD160 534ca77293d5d3b00667c1b7c9aa59a951dcc15e SHA1 d55e3a9d352ff7110e2836a28b42296a9913a96e SHA256 52783ec7a9d988d4598490e440875ebbf1597ab17db837e9aeade2c42a2ebc5b
-EBUILD calculate-desktop-2.2.9999.ebuild 1105 RMD160 f4e301021dde0b986beb63e09df2da7198196bee SHA1 30b0c9a44986ac670df023f47070d9a4a6bff5b4 SHA256 75657971d3049a918cb3e3286af564caa646c8ddafd8344437e84a476fccb929
-MISC ChangeLog 3180 RMD160 fed093ddef631d2cc3d43175f8ab728144c280e8 SHA1 655ba9bb1a9e136e6619967477ecab0d14311c28 SHA256 219055601caa22a2baa9fe97496fef78424c0357ff0d518a6d472ae30917b738
+EBUILD calculate-desktop-2.2.9999.ebuild 1057 RMD160 3ea64ab7c3c63d250f831e58d076d0dce2d4f809 SHA1 381d8990544497841192c1562cc33a78a1cba461 SHA256 696a9915527447c6b93cfec102ec8738e5f1505f09cf7df8018d1b053b2a963a
+MISC ChangeLog 3344 RMD160 c8b390eb41feeabf1cd2f1f3d2e17e345c31988a SHA1 26bcf33a5633bf3b3bb951e7326863db25edeaa2 SHA256 1e09c4506a7f2987348d43dbf9e9ee374e27b8cc18f96a304d5ef07f72d04705
 MISC metadata.xml 315 RMD160 36a1a8d03aed0a483def83e076f484a64d452a8b SHA1 f6e70641eab777d2417d8a7600e8d3f09f53f96f SHA256 67fea0b1af7d10c0f86e72ab40f527e99c6f81f7aace4716344bdfb97c769a18
