@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  15 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  calculate-desktop-2.2.9999.ebuild:
+  Fix depends for live ebuild calculate-desktop.
+
+  Discard xdms.
+
 *calculate-desktop-2.2.0.0_p20100907 (07 Sep 2010)
 
   07 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
